fix z-index of RatingFilter list

--- a/frontend/src/components/Shared/FilterAndSort/RatingFilter.module.css
+++ b/frontend/src/components/Shared/FilterAndSort/RatingFilter.module.css
@@ -24,7 +24,7 @@
   min-width: 8rem;
   border: 1px solid var(--color-mediumDark);
   background-color: rgb(0, 0, 0);
-  z-index: 1;
+  z-index: 500;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -58,5 +58,5 @@
   position: absolute;
   top: 0.5rem;
   right: 0.2rem;
-  z-index: 100;
+  z-index: 600;
 }
